# CHutil

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
include/chutil/: chutil.hpp
res/: notes.txt
src/: chutil.cpp
tests/main/: CMakeLists.txt  main.cpp  test_executable.cpp  test_file.txt
